--- a/.classpath
+++ b/.classpath
@@ -24,18 +24,18 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/befis/eclipse-workspace/Lib4Java/selenium-java-3.141.59/byte-buddy-1.8.15.jar"/>
-	<classpathentry kind="lib" path="C:/Users/befis/eclipse-workspace/Lib4Java/selenium-java-3.141.59/client-combined-3.141.59.jar"/>
-	<classpathentry kind="lib" path="C:/Users/befis/eclipse-workspace/Lib4Java/selenium-java-3.141.59/client-combined-3.141.59-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/befis/eclipse-workspace/Lib4Java/selenium-java-3.141.59/commons-exec-1.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/befis/eclipse-workspace/Lib4Java/selenium-java-3.141.59/commons-io-2.8.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/befis/eclipse-workspace/Lib4Java/selenium-java-3.141.59/commons-io-2.8.0-javadoc.jar"/>
-	<classpathentry kind="lib" path="C:/Users/befis/eclipse-workspace/Lib4Java/selenium-java-3.141.59/commons-io-2.8.0-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/befis/eclipse-workspace/Lib4Java/selenium-java-3.141.59/commons-io-2.8.0-tests.jar"/>
-	<classpathentry kind="lib" path="C:/Users/befis/eclipse-workspace/Lib4Java/selenium-java-3.141.59/commons-io-2.8.0-test-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/befis/eclipse-workspace/Lib4Java/selenium-java-3.141.59/guava-25.0-jre.jar"/>
-	<classpathentry kind="lib" path="C:/Users/befis/eclipse-workspace/Lib4Java/selenium-java-3.141.59/okhttp-3.11.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/befis/eclipse-workspace/Lib4Java/selenium-java-3.141.59/okio-1.14.0.jar"/>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
+	<classpathentry kind="lib" path="D:/Softwares/Lib4Java/selenium-java-3.141.59/byte-buddy-1.8.15.jar"/>
+	<classpathentry kind="lib" path="D:/Softwares/Lib4Java/selenium-java-3.141.59/client-combined-3.141.59.jar"/>
+	<classpathentry kind="lib" path="D:/Softwares/Lib4Java/selenium-java-3.141.59/client-combined-3.141.59-sources.jar"/>
+	<classpathentry kind="lib" path="D:/Softwares/Lib4Java/selenium-java-3.141.59/commons-exec-1.3.jar"/>
+	<classpathentry kind="lib" path="D:/Softwares/Lib4Java/selenium-java-3.141.59/commons-io-2.8.0.jar"/>
+	<classpathentry kind="lib" path="D:/Softwares/Lib4Java/selenium-java-3.141.59/commons-io-2.8.0-javadoc.jar"/>
+	<classpathentry kind="lib" path="D:/Softwares/Lib4Java/selenium-java-3.141.59/commons-io-2.8.0-sources.jar"/>
+	<classpathentry kind="lib" path="D:/Softwares/Lib4Java/selenium-java-3.141.59/commons-io-2.8.0-tests.jar"/>
+	<classpathentry kind="lib" path="D:/Softwares/Lib4Java/selenium-java-3.141.59/commons-io-2.8.0-test-sources.jar"/>
+	<classpathentry kind="lib" path="D:/Softwares/Lib4Java/selenium-java-3.141.59/guava-25.0-jre.jar"/>
+	<classpathentry kind="lib" path="D:/Softwares/Lib4Java/selenium-java-3.141.59/okhttp-3.11.0.jar"/>
+	<classpathentry kind="lib" path="D:/Softwares/Lib4Java/selenium-java-3.141.59/okio-1.14.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
